--- a/build.gradle
+++ b/build.gradle
@@ -13,16 +13,16 @@ plugins {
     // Apply the application plugin to add support for building an application
     id 'application'
 
+    id 'jacoco'
     id "org.sonarqube" version "2.7"
 
-    id 'jacoco'
 }
 
 repositories {
+    mavenCentral()
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
-    mavenCentral()
+//    jcenter()
 }
 
 jacoco {
@@ -31,12 +31,12 @@ jacoco {
 }
 
 //if you want to use custom report then uncomment below task //use command "gradle build jacocoTestReport" to generate reports using below task
-
-/*jacocoTestReport {
+/*
+jacocoTestReport {
     reports {
         xml.enabled false
         csv.enabled false
-        html.destination "${buildDir}/jacocoHtml"
+        html.destination "${buildDir}/reports/jacocoHtml"
     }
 }*/
 
@@ -47,7 +47,7 @@ test {
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
-    implementation 'com.google.guava:guava:27.0.1-jre'
+//    implementation 'com.google.guava:guava:27.0.1-jre'
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
