--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,7 @@ plugins {
 
 repositories {
     mavenCentral()
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-//    jcenter()
+    jcenter()
 }
 
 jacoco {
@@ -46,13 +44,12 @@ test {
 }
 
 dependencies {
-    // This dependency is found on compile classpath of this component and consumers.
-//    implementation 'com.google.guava:guava:27.0.1-jre'
-
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 
 }
+
+
 
 // Define the main class for the application
 mainClassName = 'chain.of.command.App'
